--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,13 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <queries>
+        <!-- Camera -->
+        <intent>
+            <action android:name="android.media.action.IMAGE_CAPTURE" />
+        </intent>
+    </queries>
+
     <application
         android:name=".ParseApplication"
         android:allowBackup="true"
@@ -16,10 +23,8 @@
         android:roundIcon="@drawable/instagram_pic1"
         android:supportsRtl="true"
         android:theme="@style/Theme.InstagramClone"
-        tools:targetApi="31" >
-        <activity
-            android:name=".PostAdapter"
-            android:exported="false" />
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true" >
 
         <provider
             android:name="androidx.core.content.FileProvider"
