--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,18 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
     implementation 'com.github.parse-community.Parse-SDK-Android:parse:1.25.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1' // for logging API calls to LogCat
-
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-
+    // refresh
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    // infinite scrolling.
+    implementation "androidx.paging:paging-runtime:2.1.2"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.3.0"
+    // parcelable
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
 
 }
